--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "test": "vitest",
-    "e2e": "playwright test"
+    "e2e": "playwright test",
+    "e2e:dashboard": "playwright test e2e/dashboard.spec.ts"
   },
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.1.2",
